@@ -58,6 +58,7 @@
 }
 
 #if     defined(HAVE_PTHREAD_MUTEX_OWNER)
+
 #define	MDESCRIPTION \
 - (NSString*) description\
 {\
@@ -65,11 +66,11 @@
     {\
       if (_name == nil)\
         {\
-          return [NSString stringWithFormat: @"%@ (locked by %d)",\
-            [super description], (int)_mutex.__data.__owner];\
+          return [NSString stringWithFormat: @"%@ (locked by %llu)",\
+            [super description], (NSUInteger)_mutex.__data.__owner];\
         }\
-      return [NSString stringWithFormat: @"%@ '%@' (locked by %d)",\
-        [super description], _name, (int)_mutex.__data.__owner];\
+      return [NSString stringWithFormat: @"%@ '%@' (locked by %llu)",\
+        [super description], _name, (NSUInteger)_mutex.__data.__owner];\
     }\
   else\
     {\
@@ -81,7 +82,18 @@
         [super description], _name];\
     }\
 }
+
+#define	MISLOCKED \
+- (BOOL) isLockedByCurrentThread\
+{\
+  if (GSPrivateThreadID() == (NSUInteger)_mutex.__data.__owner)\
+    return YES;\
+  else\
+    return NO; \
+}
+
 #else
+
 #define	MDESCRIPTION \
 - (NSString*) description\
 {\
@@ -92,6 +104,14 @@
   return [NSString stringWithFormat: @"%@ '%@'",\
     [super description], _name];\
 }
+
+#define	MISLOCKED \
+- (BOOL) isLockedByCurrentThread\
+{\
+  [NSException raise: NSGenericException format: @"Not supported"];\
+  return NO;\
+}
+
 #endif
 
 #define MFINALIZE \
@@ -235,6 +255,7 @@ MFINALIZE
   return self;
 }
 
+MISLOCKED
 MLOCK
 
 - (BOOL) lockBeforeDate: (NSDate*)limit
@@ -283,6 +304,7 @@ MFINALIZE
   return self;
 }
 
+MISLOCKED
 MLOCK
 MLOCKBEFOREDATE
 MNAME
@@ -328,6 +350,7 @@ MDESCRIPTION
   return self;
 }
 
+MISLOCKED
 MLOCK
 MLOCKBEFOREDATE
 MNAME
@@ -412,6 +435,11 @@ MUNLOCK
 	}
     }
   return self;
+}
+
+- (BOOL) isLockedByCurrentThread
+{
+  return [_condition isLockedByCurrentThread];
 }
 
 - (void) lock
